--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ failure_derive = "0.1"
 git2 = { version = "0.11", no_default_features = true}
 serde =  { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+structopt = "0.3"
 uuid = { version = "0.8", features = ["v1"]}
